--- a/tests/expected.html
+++ b/tests/expected.html
@@ -1,3 +1,12 @@
+<!--
+  ~ This file is part of the Twig Compose package.
+  ~
+  ~ Copyright 2018-now by Julian Finkler <julian@developer-heaven.de>
+  ~
+  ~ For the full copyright and license information, please read the LICENSE
+  ~ file that was distributed with this source code.
+  -->
+
 <!DOCTYPE html>
 <html>
     <head>
